test/spec_vectors/simd_f32x4/fail/module_15.wat
(module (func $f32x4.max-1st-arg-empty (result v128) (f32x4.max (v128.const f32x4 0 0 0 0))))